Last fixes, documentation tempate (#54)
* implemented graphrag

* Implement neo4j schema fetcher.

* Add graph rag.

* Normal/Graph rag picker.

* Conversation history in context/to fix.

* Minor bug fixes.

* Remove chat history parameter from strategies.

* Conversation history fix.

* User rating connected.

* prepare documentation template

---------

Co-authored-by: KarpinskiMarek <marek.karpinski96@gmail.com>